add module gateway

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
   <!--indica que es el padre de los microservice, -->
   <packaging>pom</packaging>
 
+
+  <modules>
+    <module>microservice-gateway</module>
+  </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
