feat add eureka ms

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
   <modules>
     <module>microservice-gateway</module>
+    <module>microservice-eureka</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
