--- a/microservice-eureka/src/main/resources/application.yml
+++ b/microservice-eureka/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   application:
     name: msvc-eureka
+  config:
+    import: optional:configserver:http://localhost:8888
+
 
 eureka:
   instance:
@@ -13,5 +16,3 @@ eureka:
     fetch-registry: false
     server-url:
       defaultZone: http://localhost:${server.port}/eureka
-
-
