--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>microservice-eureka</module>
     <module>microservice-config</module>
     <module>microservice-student</module>
+    <module>microservice-course</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
